--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
+      - name: Install Packages
+        run: pip install -r requirements.txt
       - name: Run tests with unittest
         run: python3 -m unittest discover -s tests
